--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -739,7 +739,7 @@ section.lazy-placeholder:after {
   background-color: #ffffff;
 }
 .cid-s2qrnnPYJb .mbr-section-subtitle {
-  color: #767676;
+  color: #ff3366;
 }
 .cid-s2qrnnPYJb .media-row {
   display: -webkit-flex;
