--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -735,7 +735,7 @@ section.lazy-placeholder:after {
 }
 .cid-s2qrnnPYJb {
   padding-top: 90px;
-  padding-bottom: 90px;
+  padding-bottom: 15px;
   background-color: #ffffff;
 }
 .cid-s2qrnnPYJb .mbr-section-subtitle {
@@ -772,6 +772,40 @@ section.lazy-placeholder:after {
 }
 .cid-s2qrnnPYJb .team-item .item-caption {
   background: #efefef;
+}
+.cid-s2qEe2kSmv {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-s2qEe2kSmv .card-box {
+  background-color: #ffffff;
+  padding: 2rem;
+}
+.cid-s2qEe2kSmv h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-s2qEe2kSmv p {
+  color: #767676;
+  text-align: left;
+}
+.cid-s2qEe2kSmv .card-wrapper {
+  position: relative;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-s2qEe2kSmv .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-s2qEe2kSmv .card-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
 }
 .cid-s2qwVtfkpv {
   padding-top: 60px;
@@ -946,6 +980,98 @@ section.lazy-placeholder:after {
 }
 @media (max-width: 768px) {
   .cid-s2qALxO1CZ .image-block {
+    width: 100% !important;
+  }
+}
+.cid-s2rJ7ZWaRl {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-s2rJ7ZWaRl .mbr-section-subtitle {
+  color: #ff3366;
+}
+.cid-s2rJKa4jLn {
+  background: #efefef;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.cid-s2rJKa4jLn .image-block {
+  margin: auto;
+}
+.cid-s2rJKa4jLn figcaption {
+  position: relative;
+}
+.cid-s2rJKa4jLn figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-s2rJKa4jLn .image-block {
+    width: 100% !important;
+  }
+}
+.cid-s2rJ81Svun {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-s2rJ81Svun .mbr-section-subtitle {
+  color: #ff3366;
+}
+.cid-s2rJ81Svun .media-row {
+  display: -webkit-flex;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-s2rJ81Svun .team-item {
+  transition: all .2s;
+  margin-bottom: 2rem;
+}
+.cid-s2rJ81Svun .team-item .item-image img {
+  width: 100%;
+}
+.cid-s2rJ81Svun .team-item .item-name p {
+  margin-bottom: 0;
+}
+.cid-s2rJ81Svun .team-item .item-role p {
+  margin-bottom: 0;
+}
+.cid-s2rJ81Svun .team-item .item-social {
+  display: -webkit-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  -webkit-justify-content: center;
+}
+.cid-s2rJ81Svun .team-item .item-social .socicon {
+  color: #232323;
+  font-size: 17px;
+}
+.cid-s2rJ81Svun .team-item .item-caption {
+  background: #efefef;
+}
+.cid-s2rJ82BjTH {
+  background: #ffffff;
+}
+.cid-s2rJ82BjTH .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-s2rJ82BjTH .mbr-figure {
+  margin: 0 auto;
+}
+.cid-s2rJ82BjTH figcaption {
+  position: relative;
+}
+.cid-s2rJ82BjTH figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-s2rJ82BjTH .image-block {
     width: 100% !important;
   }
 }
