--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1066,7 +1066,7 @@ section.lazy-placeholder:after {
 .cid-s2tdL6LDwI {
   padding-top: 75px;
   padding-bottom: 60px;
-  background-color: #efefef;
+  background-color: #ffffff;
 }
 .cid-s2tdL6LDwI .mbr-section-subtitle {
   color: #767676;
@@ -1132,6 +1132,42 @@ section.lazy-placeholder:after {
 }
 @media (max-width: 768px) {
   .cid-s2tkWb744G .image-block {
+    width: 100% !important;
+  }
+}
+.cid-s2tocbmdly {
+  padding-top: 75px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-s2tocbmdly .mbr-section-subtitle {
+  color: #232323;
+  text-align: center;
+}
+.cid-s2tocbmdly H2 {
+  color: #010000;
+}
+.cid-s2tocbmdly .mbr-section-subtitle DIV {
+  text-align: left;
+}
+.cid-s2to7kSfmY {
+  background: #ffffff;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.cid-s2to7kSfmY .image-block {
+  margin: auto;
+}
+.cid-s2to7kSfmY figcaption {
+  position: relative;
+}
+.cid-s2to7kSfmY figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-s2to7kSfmY .image-block {
     width: 100% !important;
   }
 }
