--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1112,7 +1112,7 @@ section.lazy-placeholder:after {
   color: #010000;
 }
 .cid-s2tl0ygHYD .mbr-section-subtitle DIV {
-  text-align: left;
+  text-align: center;
 }
 .cid-s2tkWb744G {
   background: #ffffff;
@@ -1148,7 +1148,7 @@ section.lazy-placeholder:after {
   color: #010000;
 }
 .cid-s2tocbmdly .mbr-section-subtitle DIV {
-  text-align: left;
+  text-align: center;
 }
 .cid-s2to7kSfmY {
   background: #ffffff;
