--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -773,39 +773,268 @@ section.lazy-placeholder:after {
 .cid-s2qrnnPYJb .team-item .item-caption {
   background: #efefef;
 }
-.cid-s2qEe2kSmv {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
+.cid-s2yBXbgCcd {
+  padding-top: 15px;
+  padding-bottom: 30px;
+  background-color: #ff7f9f;
 }
-.cid-s2qEe2kSmv .card-box {
+.cid-s2yBXbgCcd .card-box {
   background-color: #ffffff;
   padding: 2rem;
 }
-.cid-s2qEe2kSmv h4 {
+.cid-s2yBXbgCcd h4 {
   font-weight: 500;
   margin-bottom: 0;
   text-align: left;
 }
-.cid-s2qEe2kSmv p {
+.cid-s2yBXbgCcd p {
   color: #767676;
   text-align: left;
 }
-.cid-s2qEe2kSmv .card-wrapper {
+.cid-s2yBXbgCcd .card-wrapper {
   position: relative;
   box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
   transition: box-shadow 0.3s;
 }
-.cid-s2qEe2kSmv .card-wrapper:hover {
+.cid-s2yBXbgCcd .card-wrapper:hover {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s;
 }
-.cid-s2qEe2kSmv .card-img {
+.cid-s2yBXbgCcd .card-img {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   overflow: hidden;
+}
+.cid-s2yBXbgCcd P {
+  color: #232323;
+}
+.cid-s2yFbb65ao {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-s2yFbb65ao .mbr-section-subtitle {
+  color: #232323;
+  text-align: center;
+}
+.cid-s2yFbb65ao H2 {
+  color: #010000;
+  text-align: right;
+}
+.cid-s2yFbb65ao .mbr-section-subtitle DIV {
+  text-align: right;
+}
+.cid-s2yDhQDwjd {
+  padding-top: 30px;
+  padding-bottom: 45px;
+  background: #ffffff;
+}
+.cid-s2yDhQDwjd .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+  -webkit-align-items: stretch;
+}
+.cid-s2yDhQDwjd .media-container-row .img-item {
+  display: -webkit-flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: center;
+}
+.cid-s2yDhQDwjd .media-container-row .img-item img {
+  width: 100%;
+  min-height: 1px;
+}
+.cid-s2yDhQDwjd .media-container-row .img-item .img-caption {
+  background: #efefef;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-s2yDhQDwjd .media-container-row .img-item .img-caption p {
+  margin-bottom: 0;
+}
+.cid-s2yDhQDwjd .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-s2yDhQDwjd .img-item {
+    width: 100% !important;
+  }
+  .cid-s2yDhQDwjd .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+    -webkit-flex-basis: initial !important;
+  }
+}
+.cid-s2yHvrOiAg {
+  padding-top: 75px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-s2yHvrOiAg .mbr-section-subtitle {
+  color: #767676;
+  text-align: center;
+}
+.cid-s2yHvrOiAg H2 {
+  color: #010000;
+}
+.cid-s2yHvrOiAg .mbr-section-subtitle DIV {
+  text-align: center;
+}
+.cid-s2yQKq3maq {
+  background: #cc2952;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.cid-s2yQKq3maq .image-block {
+  margin: auto;
+}
+.cid-s2yQKq3maq .mbr-figure {
+  margin: 0 auto;
+}
+.cid-s2yQKq3maq figcaption {
+  position: relative;
+}
+.cid-s2yQKq3maq figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-s2yQKq3maq .image-block {
+    width: 100% !important;
+  }
+}
+.cid-s2yNcLWhpr {
+  padding-top: 45px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-s2yNcLWhpr .mbr-section-subtitle {
+  color: #232323;
+  text-align: center;
+}
+.cid-s2yNcLWhpr H2 {
+  color: #cc2952;
+}
+.cid-s2yNcLWhpr .mbr-section-subtitle DIV {
+  text-align: center;
+}
+.cid-s2yN70slYk {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-s2yN70slYk .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-s2yN70slYk .media-container-row {
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+.cid-s2yN70slYk .mbr-text {
+  color: #0b0202;
+  text-align: left;
+}
+.cid-s2yN70slYk .mbr-author-desc {
+  display: block;
+  color: #767676;
+}
+.cid-s2yN70slYk .mbr-author-name {
+  color: #767676;
+}
+.cid-s2yN70slYk .mbr-testimonial .panel-item {
+  background-color: #ffffff;
+}
+.cid-s2yN70slYk .mbr-testimonial .card-block {
+  -webkit-flex-grow: 0;
+  flex-grow: 0;
+  padding: 2.4rem 2.4rem 0 2.4rem;
+}
+.cid-s2yN70slYk .mbr-testimonial .card-block .testimonial-photo {
+  display: inline-block;
+  width: 120px;
+  height: 120px;
+  margin-bottom: 1.6rem;
+  overflow: hidden;
+  border-radius: 50%;
+}
+.cid-s2yN70slYk .mbr-testimonial .card-block .testimonial-photo img {
+  width: 100%;
+  min-width: 100%;
+  min-height: 100%;
+}
+.cid-s2yN70slYk .mbr-testimonial .card-footer {
+  padding-bottom: 2.4rem;
+  border-top: 0;
+  padding-top: 1rem;
+  word-wrap: break-word;
+  word-break: break-word;
+  background: none;
+}
+@media (max-width: 300px) {
+  .cid-s2yN70slYk .testimonial-photo {
+    width: 100% !important;
+    height: auto !important;
+  }
+}
+.cid-s2ySntPjPu {
+  padding-top: 60px;
+  padding-bottom: 45px;
+  background-color: #010000;
+}
+.cid-s2ySntPjPu P {
+  color: #767676;
+}
+.cid-s2ySntPjPu H1 {
+  color: #ffffff;
+}
+.cid-s2ySntPjPu H3 {
+  color: #ffffff;
+}
+.cid-s2yS6KnV8S {
+  padding-top: 60px;
+  padding-bottom: 90px;
+  background-color: #39459f;
+}
+.cid-s2yS6KnV8S P {
+  color: #767676;
+}
+.cid-s2yS6KnV8S H1 {
+  color: #ffffff;
+}
+.cid-s2yRQla4um {
+  padding-top: 60px;
+  padding-bottom: 90px;
+  background-color: #24a522;
+}
+.cid-s2yRQla4um P {
+  color: #767676;
+}
+.cid-s2yRQla4um H1 {
+  color: #ffffff;
+}
+.cid-s2yRQla4um H3 {
+  color: #ffffff;
+}
+.cid-s2yEVzDF7y {
+  padding-top: 105px;
+  padding-bottom: 90px;
+  background-color: #010000;
+}
+.cid-s2yEVzDF7y P {
+  color: #767676;
+}
+.cid-s2yEVzDF7y H1 {
+  color: #ffffff;
 }
 .cid-s2qwVtfkpv {
   padding-top: 60px;
