--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -986,6 +986,30 @@ section.lazy-placeholder:after {
     height: auto !important;
   }
 }
+.cid-s2z4AMTPYd {
+  background: #24a522;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.cid-s2z4AMTPYd .image-block {
+  margin: auto;
+}
+.cid-s2z4AMTPYd .mbr-figure {
+  margin: 0 auto;
+}
+.cid-s2z4AMTPYd figcaption {
+  position: relative;
+}
+.cid-s2z4AMTPYd figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-s2z4AMTPYd .image-block {
+    width: 100% !important;
+  }
+}
 .cid-s2ySntPjPu {
   padding-top: 60px;
   padding-bottom: 45px;
