--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -711,7 +711,7 @@ section.lazy-placeholder:after {
   opacity: 0.3;
 }
 .cid-s2qr7mhJeB {
-  background: #ffffff;
+  background: #0b0202;
 }
 .cid-s2qr7mhJeB .image-block {
   margin: auto;
@@ -1599,4 +1599,92 @@ section.lazy-placeholder:after {
   .cid-s2yzQsVL83 .image-block {
     width: 100% !important;
   }
+}
+.cid-s2DBwzCs26 {
+  padding-top: 90px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-s2DBwzCs26 .mbr-section-subtitle {
+  color: #ff3366;
+}
+.cid-s2DBwzCs26 .media-row {
+  display: -webkit-flex;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-s2DBwzCs26 .team-item {
+  transition: all .2s;
+  margin-bottom: 2rem;
+}
+.cid-s2DBwzCs26 .team-item .item-image img {
+  width: 100%;
+}
+.cid-s2DBwzCs26 .team-item .item-name p {
+  margin-bottom: 0;
+}
+.cid-s2DBwzCs26 .team-item .item-role p {
+  margin-bottom: 0;
+}
+.cid-s2DBwzCs26 .team-item .item-social {
+  display: -webkit-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  -webkit-justify-content: center;
+}
+.cid-s2DBwzCs26 .team-item .item-social .socicon {
+  color: #232323;
+  font-size: 17px;
+}
+.cid-s2DBwzCs26 .team-item .item-caption {
+  background: #efefef;
+}
+.cid-s2DBwAdiPS {
+  padding-top: 15px;
+  padding-bottom: 30px;
+  background-color: #ff7f9f;
+}
+.cid-s2DBwAdiPS .card-box {
+  background-color: #ffffff;
+  padding: 2rem;
+}
+.cid-s2DBwAdiPS h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-s2DBwAdiPS p {
+  color: #767676;
+  text-align: left;
+}
+.cid-s2DBwAdiPS .card-wrapper {
+  position: relative;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-s2DBwAdiPS .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-s2DBwAdiPS .card-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+}
+.cid-s2DBwAdiPS P {
+  color: #232323;
+}
+.cid-s2DBwF2v8l {
+  padding-top: 105px;
+  padding-bottom: 90px;
+  background-color: #010000;
+}
+.cid-s2DBwF2v8l P {
+  color: #767676;
+}
+.cid-s2DBwF2v8l H1 {
+  color: #ffffff;
 }
